tests/base/parser/bad/exps/exp_t-match-spid-with-bar-cid-lparen-underscore-with.scilexp
let a = None {Bool} in
match a with
| Some (x => x (* should be closed *)
| _ => False
end
